--- a/test.html
+++ b/test.html
@@ -9,8 +9,8 @@
 
 
         #box {
-            width: 200px;
-            height: 200px;
+            width: 400px;
+            height: 400px;
             display: flex; /* Use flexbox for content alignment */
             justify-content: center; /* Center text horizontally inside the box */
             align-items: center; /* Center text vertically inside the box */
@@ -21,8 +21,8 @@
         }   
 
         #img{
-            width: 200px;
-            height: 200px;
+            width: 400px;
+            height: 400px;
         }
     </style>
 </head>
@@ -33,7 +33,7 @@
         
     <div id="div1">click on me</div> 
     
-    <div id="div2" style="display: none;"><img id="img" src="cat.PNG" alt=""></div> 
+    <div id="div2" style="display: none;"><img id="img" src="taser.PNG" alt=""></div> 
 
         </div>
 
