--- a/test.html
+++ b/test.html
@@ -6,17 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        html, body{
+           
+            display: flex; /* Use flexbox for content alignment */
+            justify-content: center; /* Center text horizontally inside the box */
+            align-items: center; /* Center text vertically inside the box */
 
+        }
 
         #box {
+            margin-top: 60%;
             width: 400px;
             height: 400px;
             display: flex; /* Use flexbox for content alignment */
             justify-content: center; /* Center text horizontally inside the box */
             align-items: center; /* Center text vertically inside the box */
             background-color: aquamarine;  
-            margin-top: 15%;
-            margin-left: 40%;
+      
 
         }   
 
